<resources>
    <string name="app_name">给艾敏的一个小账本</string>
    <string name="add">添加账目</string>
    <string name="look">查看账目</string>
    <string name="hint_value">0.00</string>
    <string name="title">选项</string>
    <string name="select">请选择</string>
    <string name="income">收入</string>
    <string name="pay">支出</string>
    <string name="text_value">金  额</string>
    <string name="text_matter">事  项</string>
    <string name="button_save">保存</string>
    <string name="button_cancel">取消</string>
    <string name="input_matter">钱花在了什么地方呢\u2026</string>
    <string name="account_today_sum">今日总消费:</string>
    <string name="account_today_max">今日最高消费:</string>
    <string name="account_this_month_sum">本月总消费:</string>
    <string name="account_this_month_max">本月最高单笔消费:</string>
    <string name="account_today_income_sum">今日总收入:</string>
    <string name="account_this_month_income_sum">本月总收入:</string>
</resources>
