<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/check_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.callmebear.financerecorder.TodayAccountView
                    android:id="@+id/account_today"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30sp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_today_pay_sum"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="@string/account_today_sum"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/colorDeepPink" />

                        <TextView
                            android:id="@+id/text_value_today_pay_sum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_value"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/colorBlack" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30sp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_today_pay_max"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="@string/account_today_max"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/colorDeepPink" />

                        <TextView
                            android:id="@+id/text_value_today_pay_max"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/hint_value"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/colorBlack" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30sp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_today_income_sum"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="@string/account_today_income_sum"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/colorDeepPink" />

                        <TextView
                            android:id="@+id/text_value_today_income_sum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/hint_value"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/colorBlack" />
                    </LinearLayout>

                </com.callmebear.financerecorder.TodayAccountView>

                <com.callmebear.financerecorder.ThisMonthAccountView
                    android:id="@+id/account_this_month"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30sp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_this_month_pay_sum"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="@string/account_this_month_sum"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/colorDeepPink" />

                        <TextView
                            android:id="@+id/text_value_this_month_pay_sum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_value"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/colorBlack" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30sp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_this_month_pay_max"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="@string/account_this_month_max"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/colorDeepPink" />

                        <TextView
                            android:id="@+id/text_value_this_month_pay_max"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_value"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/colorBlack" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30sp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_this_month_income_sum"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="@string/account_this_month_income_sum"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/colorDeepPink" />

                        <TextView
                            android:id="@+id/text_value_this_month_income_max"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_value"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/colorBlack" />
                    </LinearLayout>




                </com.callmebear.financerecorder.ThisMonthAccountView>


            </FrameLayout>
        </LinearLayout>
    </TabHost>
</FrameLayout>